[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/PlayerInfoUI.gd" type="Script" id=1]
[ext_resource path="res://sprites/ui/heart_full.png" type="Texture" id=2]
[ext_resource path="res://sprites/ui/skull_full.png" type="Texture" id=3]
[ext_resource path="res://fonts/m5x7.tres" type="DynamicFont" id=5]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 18.0
margin_top = 18.0
margin_right = 175.0
margin_bottom = 136.0

[node name="PlayerHealthUI" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 157.0
margin_bottom = 48.0

[node name="Heart1" type="TextureRect" parent="VBoxContainer/PlayerHealthUI"]
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Heart2" type="TextureRect" parent="VBoxContainer/PlayerHealthUI"]
margin_left = 52.0
margin_right = 100.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Heart3" type="TextureRect" parent="VBoxContainer/PlayerHealthUI"]
margin_left = 104.0
margin_right = 152.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="PlayerSkullsUI" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 52.0
margin_right = 157.0
margin_bottom = 100.0
size_flags_vertical = 0

[node name="Skull1" type="TextureRect" parent="VBoxContainer/PlayerSkullsUI"]
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
rect_pivot_offset = Vector2( 24, 24 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="Skull2" type="TextureRect" parent="VBoxContainer/PlayerSkullsUI"]
margin_left = 52.0
margin_right = 100.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
rect_pivot_offset = Vector2( 24, 24 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="Skull3" type="TextureRect" parent="VBoxContainer/PlayerSkullsUI"]
margin_left = 104.0
margin_right = 152.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
rect_pivot_offset = Vector2( 24, 24 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="WeaponNameLabel" type="Label" parent="VBoxContainer"]
margin_top = 104.0
margin_right = 157.0
margin_bottom = 117.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
align = 1

[node name="Tween" type="Tween" parent="."]
